[tool.poetry]
name = "agent-toolkit"
version = "0.20221213.4"
description = "A package to connect automatic agents to Greenland server and services."
authors = ["MSR Deep Learning Engineering Team"]
packages = [
    { include = "agent_toolkit" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
python-dotenv = "^0.20.0"
azure-eventhub = "^5.10.0"
requests = "^2.27.1"
gym = "0.24.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
types-python-dateutil = "^2.8.19"
types-requests = "^2.28.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
